tests/data/pl0/valid/compat_relop_brackets.pl0
var x;
begin
  x := 1;
  if x [ 2 then ! 1;
  if x ] 0 then ! 1
end.
