tests/data/pl0/invalid/error_undeclared_identifier.pl0
begin
  y := 1
end.
